fix modal overflow. menu lateral

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -35,3 +35,7 @@
 .display-none{
   display: none !important;
 }
+
+.modal {
+  overflow-y:auto !important;
+}
